--- a/WP/Project 1/Test/project1/templates/register.html
+++ b/WP/Project 1/Test/project1/templates/register.html
@@ -57,7 +57,7 @@ input[type=text], input[type=password] {
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <input type="submit" class="registerbtn">
+    <button type="submit" class="registerbtn">submit</button>
   </div>
 
   
