Task -2 sessions completed

--- a/WP/Project 1/Test/project1/templates/home.html
+++ b/WP/Project 1/Test/project1/templates/home.html
@@ -2,8 +2,9 @@
 
 </head>
 <body>
-
-<input type="button" class="button" value="Logout" >
+<form action="/logout">
+    <button type="submit" class="registerbtn" >Logout</button><br>
+</form>
 <h1>Web site under construction</h1>
 </body>
 </html>
