--- a/WP/Project 1/Test/project1/templates/home.html
+++ b/WP/Project 1/Test/project1/templates/home.html
@@ -1,37 +1,93 @@
+<!DOCTYPE html>
+<html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  font-family: Arial;
+}
 
+* {
+  box-sizing: border-box;
+}
+
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+
+form.example input[id=type] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+
+form.example button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
+
+form.example button:hover {
+  background: #0b7dda;
+}
+
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
+</style>
 </head>
-<body>
+<body bgcolor="#E6E6FA">
 
-<button type="submit" class="registerbtn" formaction = '/logout' >Logout</button><br><br>
-<form action="/" method = "post">
-	<label>select a field</label><br>
+
+
+
+<form class="example" action="/" method = "post" style="margin:auto;max-width:600px">
     <select id="type" name = "type">
-  	<option value="ISBN">ISBN</option>
-  	<option value="Name">Name</option>
-  	<option value="author">author</option>
-  	<option value="year">year</option>
-	</select><br><br>
-	<label>Type your search result</label><br>
-	<input type="text" id="query" name="query"><br><br>
-	<input type="submit" value="Submit">
+    <option value="ISBN">ISBN</option>
+    <option value="Name">Name</option>
+    <option value="author">author</option>
+    <option value="year">year</option>
+  </select><br><br> 
+  <input type="text" placeholder="Search.." name="query">
+  <button type="submit"><i class="fa fa-search"></i></button>
 </form>
+
 </body>
-</html>
+</html> 
+
 
 {% if message is none %}
 <P> No results found for your search </P>
 {%endif %}
 
 {% if value is not none %}
-<P>The following are the results found for your search</P><br>
+<P>The following are the results found for your search</P>
 <table class="table" style="width:100%">
   <thead class="thead-dark">
   <tr>
-    <td>isbn</td>
-    <td>Name</td>		
-    <td>author</td>
-    <td>year</td>
+    <td><b>ISBN</b></td>
+    <td><b>Name</b></td>		
+    <td><b>Author</b></td>
+    <td><b>Year</b></td>
   </tr>
   </thead>
   <tbody>
@@ -46,3 +102,6 @@
  </tbody>
 </table>
  {%endif %}
+
+
+
