modularized DB code for testing and added logout button in home page

--- a/WP/Project 1/Test/project1/templates/home.html
+++ b/WP/Project 1/Test/project1/templates/home.html
@@ -56,7 +56,9 @@ form.example::after {
 </style>
 </head>
 <body bgcolor="#E6E6FA">
-
+  <form>
+    <button type="submit" class="registerbtn" formaction="/logout">Logout</button><br>
+</form>
 
 
 
